--- a/apps/dmAdminTheme/templates/admin/base.html
+++ b/apps/dmAdminTheme/templates/admin/base.html
@@ -44,8 +44,9 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:100,300,400,500,700,900" media="all" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poiret+One:100,300,400,500,700,900" media="all" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css" />
-        <!-- Style -->
         <link rel="stylesheet" href="{% static 'dshop/css/bootstrap.min.css' %}" />
+        <!-- Style -->
+        <link rel="stylesheet" href="{% static 'dshop/shopwise/css/all.min.css' %}" />
         {% block styles %}
             <link rel="stylesheet" type="text/css" href="{% static 'admin/css/base.css' %}" />
             <link rel="stylesheet" type="text/css" href="{% static 'admin/css/responsive.css' %}" />
